compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__imported_type_cursor_mid_phrase_other_modules.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "import dep\n\npub fn wibble(\n  _: dep.Zoo,\n) -> Nil {\n  Nil\n}\n"
snapshot_kind: text
---
import dep

pub fn wibble(
  _: dep|.Zoo,
) -> Nil {
  Nil
}


----- Completion content -----
