compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__imported_unqualified_module_function.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\nimport dep.{wobble}\n"
snapshot_kind: text
---
|
import dep.{wobble}


----- Completion content -----
