compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__imported_unqualified_public_enum.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\nimport dep.{Left}\n"
snapshot_kind: text
---
|
import dep.{Left}


----- Completion content -----
