compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__imported_unqualified_public_record.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\nimport dep.{Box}\n"
snapshot_kind: text
---
|
import dep.{Box}


----- Completion content -----
