compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__internal_types_from_root_package_are_in_the_completions.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "import dep\n\npub fn wibble(\n    _: String,\n) -> Nil {\n    Nil\n}"
snapshot_kind: text
---
import dep

pub fn wibble(
|    _: String,
) -> Nil {
    Nil
}


----- Completion content -----
