compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__internal_types_from_the_same_module_are_in_the_completions.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\n@internal pub type Alias = Result(Int, String)\n@internal pub type AnotherType {\n  Wibble\n}\n"
snapshot_kind: text
---
@internal pub type Alias = Result(Int, String)
@internal pub type AnotherType {
|  Wibble
}


----- Completion content -----
