compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__labelled_arguments_from_different_module.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\nimport wibble\n\npub fn main() {\n  wibble.divide(10, b)\n}\n"
snapshot_kind: text
---
import wibble

pub fn main() {
  wibble.divide(10, b|)
}


----- Completion content -----
