compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__labelled_arguments_function_call.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn divide(x: Int, by y: Int) { x / y }\n\npub fn main() {\n  divide(10, b)\n}\n"
snapshot_kind: text
---
pub fn divide(x: Int, by y: Int) { x / y }

pub fn main() {
  divide(10, b|)
}


----- Completion content -----
